--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,9 @@ h1,h2,h3,h4,h5,h6 {
 .country-card {
     border: 1px solid black;
     width: 30%;
-    text-align: center;
+	text-align: center;
+	padding-bottom: 2em;
+	margin: 1em;
 }
 
 .nav__bar-button {
@@ -46,8 +48,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .country-container {
-    justify-content: space-around;
+	justify-content: center;
 	display: flex;
+
 }
 
 .country__cities {
@@ -63,4 +66,9 @@ h1,h2,h3,h4,h5,h6 {
 .country__famous-citizens {
 	display: flex;
 	justify-content: center;
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
 }
