--- a/styles/main.css
+++ b/styles/main.css
@@ -28,9 +28,14 @@ h1,h2,h3,h4,h5,h6 {
 	border-radius: 25px;
 }
 
+.nav__bar {
+	display: flex;
+}
+
 .nav__bar-button {
-	border: 1 px solid lightcoral;
+	border: 1 px solid rgb(10, 7, 7);
 	padding: 3px;
+	margin 0 2px
 	flex-basis: 2;
 	text-align: center;
 }
