--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,8 @@ h1,h2,h3,h4,h5,h6 {
     display: block;
     width: 90%;
     margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
+	margin-top: 2em;
 }
 
 .logo {
@@ -77,6 +78,7 @@ h1,h2,h3,h4,h5,h6 {
 
 footer {
 	align-content: flex-end;
+	color: #778899;
 }
 
 #active__page {
