last commit hopefully

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Questrial");
-@import "cards.css"
+@import "cards.css";
 
 /*Typography
 --------------------------------------------------------------*/
