--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Questrial");
+@import "cards.css";
 
 /*Typography
 --------------------------------------------------------------*/
